--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8">
   <title>Greenlab - Головна сторінка</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Універсальна лабораторія – це сучасний ветеринарний діагностичний центр, основний напрямок роботи якого-молекулярно-генетичні дослідження хвороб дрібних домашніх тварин.Своєчасна і точна діагностика є невід’ємною частиною професіоналізму ветеринарного лікаря.">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="пцр, плр, аналізи, ветеринар, аналізи чорноморськ, аналізи, тварини, діагностичні панелі, бакпосів, гормональні дослідження, маркери запалення, аналізи для тварин одеса, аналізи для тварин чорноморьск, діагностика плр, green lab, labolatoriya, плр тести, пцр тесты">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
