--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
-<html lang="uk">
+<html lang="uk" prefix="og: //ogp.me/ns#">
 <head>
   <meta charset="utf-8">
   <title>Greenlab - Головна сторінка</title>
   <base href="/">
+  <meta property="og:title" content="Універсальна лабораторія - Green PCR Lab" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://green-lab.com.ua" />
+  <meta property="og:image" content="https://green-lab.com.ua/images/og_image.png" />
+  <meta property="og:image:type" content="https://green-lab.com.ua/images/og_image.png" />
   <meta name="description" content="Універсальна лабораторія – це сучасний ветеринарний діагностичний центр, основний напрямок роботи якого-молекулярно-генетичні дослідження хвороб дрібних домашніх тварин.Своєчасна і точна діагностика є невід’ємною частиною професіоналізму ветеринарного лікаря.">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
