--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
   <base href="/">
   <meta property="og:title" content="Універсальна лабораторія - Green PCR Lab" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://green-lab.com.ua" />
-  <meta property="og:image" content="https://green-lab.com.ua/images/og_image.png" />
-  <meta property="og:image:type" content="https://green-lab.com.ua/images/og_image.png" />
+  <meta property="og:url" content="http://fortnitepostertelegrambot.website/" />
+  <meta property="og:image" content="http://fortnitepostertelegrambot.website/assets/images/og_image.png" />
+  <meta property="og:image:type" content="image/png" />
   <meta name="description" content="Універсальна лабораторія – це сучасний ветеринарний діагностичний центр, основний напрямок роботи якого-молекулярно-генетичні дослідження хвороб дрібних домашніх тварин.Своєчасна і точна діагностика є невід’ємною частиною професіоналізму ветеринарного лікаря.">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="keywords" content="пцр, плр, аналізи, ветеринар, аналізи чорноморськ, аналізи, тварини, діагностичні панелі, бакпосів, гормональні дослідження, маркери запалення, аналізи для тварин одеса, аналізи для тварин чорноморьск, діагностика плр, green lab, labolatoriya, плр тести, пцр тесты">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
