--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="keywords" content="пцр, плр, аналізи, ветеринар, аналізи чорноморськ, аналізи, тварини, діагностичні панелі, бакпосів, гормональні дослідження, маркери запалення, аналізи для тварин одеса, аналізи для тварин чорноморьск, діагностика плр, green lab, labolatoriya, плр тести, пцр тесты">
+  <meta name="format-detection" content="telephone=no" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
