--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="keywords" content="пцр, плр, аналізи, ветеринар, аналізи чорноморськ, аналізи, тварини, діагностичні панелі, бакпосів, гормональні дослідження, маркери запалення, аналізи для тварин одеса, аналізи для тварин чорноморьск, діагностика плр, green lab, labolatoriya, плр тести, пцр тесты">
   <meta name="format-detection" content="telephone=no" />
+  <meta name="format-detection" content="telephone=no">
+  <meta name="format-detection" content="date=no">
+  <meta name="format-detection" content="address=no">
+  <meta name="format-detection" content="email=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
