--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <meta name="format-detection" content="date=no">
   <meta name="format-detection" content="address=no">
   <meta name="format-detection" content="email=no">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jost&family=Montserrat+Alternates:wght@300&family=Montserrat:wght@700&family=Nunito:wght@500&family=Raleway&display=swap" rel="stylesheet">
